--- a/app/src/main/res/layout/item_rv_home.xml
+++ b/app/src/main/res/layout/item_rv_home.xml
@@ -30,6 +30,7 @@
 
                 <ImageView
                     android:id="@+id/iv_image"
+                    android:src="@drawable/ic_person"
                     android:layout_width="@dimen/_200sdp"
                     android:layout_height="@dimen/_200sdp"
                     android:layout_gravity="center"
